Changed table height to prevent covering footer

--- a/res/main.css
+++ b/res/main.css
@@ -15,6 +15,7 @@ html, body {
 
 .thing-table-child {
     width: 85vw;
+    height: 75vh;
     overflow: auto;
 }
 
